--- a/src/style.css
+++ b/src/style.css
@@ -81,6 +81,20 @@ header {
 }
 
 /* main */
+main {
+    position: relative;
+    background-image: url(../assets/img/Fundo-Verao123.webp);
+}
+
+main::before {
+    position: absolute;
+    content: '';
+    background: rgb(0, 0, 0);
+    background: linear-gradient(180deg, rgba(0, 0, 0, 0.4) 0%, rgba(111, 111, 111, .7) 100%);
+    z-index: 0;
+    width: 100%;
+    height: 100%;
+}
 
 .main-box {
     position: relative;
@@ -134,6 +148,10 @@ header {
 
 .main-img {
     width: 80%;
+}
+
+.main-img {
+    max-width: 45.2rem;
 }
 
 .main-text-box {
@@ -239,13 +257,73 @@ footer {
     margin: 0 auto;
 }
 
+.limitador {
+    position: relative;
+    max-width: 144rem;
+    margin: 0 auto;
+}
+
 /**/
 
-@media (min-width: 425px) {}
+@media (min-width: 425px) {
+    .header-title {
+        font-size: 2.4rem;
+    }
 
-@media (min-width: 768px) {}
+    .main-button {
+        font-size: 2.4rem;
+    }
 
-@media (min-width: 1024px) {}
+    .main-img {
+        width: 90%;
+    }
+
+    .main-tb-ul {
+        max-width: 40rem;
+    }
+}
+
+@media (min-width: 768px) {
+    .main-tb-title {
+        max-width: 45rem;
+    }
+
+    .main-tb-ul {
+        max-width: 45rem;
+    }
+
+    .anvisa-title {
+        max-width: 45rem;
+        margin: 0 auto;
+    }
+
+    .main-button {
+        width: max-content;
+        margin: 0 auto;
+    }
+
+    .main-text-box {
+        padding: 4rem 2rem 8rem 0;
+    }
+
+    .main-cta-box {
+        gap: 2.4rem;
+    }
+}
+
+@media (min-width: 840px) {
+    .main-box {
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-between;
+    }
+}
+
+@media (min-width: 1024px) {
+    .main-box {
+        justify-content: space-around;
+    }
+}
 
 @keyframes tilt-shaking {
 
