--- a/src/style.css
+++ b/src/style.css
@@ -84,9 +84,10 @@ header {
 main {
     position: relative;
     background-image: url(../assets/img/Fundo-Verao123.webp);
+    background-size: cover;
 }
 
-main::before {
+/* main::before {
     position: absolute;
     content: '';
     background: rgb(0, 0, 0);
@@ -94,7 +95,7 @@ main::before {
     z-index: 0;
     width: 100%;
     height: 100%;
-}
+} */
 
 .main-box {
     position: relative;
